// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputsPanel > should render error state 1`] = `
<DocumentFragment>
  <div
    class="msla-trace-inputs-outputs"
  >
    <div
      class="msla-trace-inputs-outputs-header"
    >
      <div
        style="border-radius: 8px; background: rgb(0, 0, 0); min-height: 32px; min-width: 6px;"
      />
      <button
        aria-expanded="true"
        class="fui-Button r1alrhcs ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        style="justify-content: flex-start; flex-grow: 1;"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
        Inputs
      </button>
      <button
        class="fui-Button r1alrhcs msla-show-raw-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        type="button"
      >
        Show raw inputs
        <span
          class="fui-Button__icon rywnvv2 ___1yz413i_pen21v0 f1a695kz"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
    </div>
    <div
      aria-labelledby="inputs-node1"
      class="msla-trace-values"
    >
      <section
        class="msla-trace-value-label"
      >
        <label
          class="msla-trace-value-display-name"
        />
        <div
          class="msla-colorizer-json-body"
        >
          <div
            aria-readonly="true"
            class="msla-colorizer-wrapper"
            role="textbox"
            tabindex="0"
          >
            <div
              class="buttons"
            >
              <button
                aria-label="Copy the value of '' to the clipboard"
                class="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
                type="button"
              >
                <span
                  class="fui-Button__icon rywnvv2"
                >
                  <span
                    data-testid="fluent-icon"
                  />
                </span>
              </button>
            </div>
            <pre
              class="prism-code language-json"
              style="color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);"
            >
              <div
                class="token-line"
                style="color: rgb(0, 0, 0);"
              >
                <span
                  class="token plain"
                >
                  ‌
                </span>
              </div>
            </pre>
          </div>
        </div>
      </section>
    </div>
    <div
      aria-orientation="horizontal"
      class="fui-Divider ___14drqcq_z8b5q40 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q fly5x3f f163fonl f51yk4v f13rof3u f8rth92 f6czdpx f1iyka9k fzynn9s fekrn8e f1kyqvp9 fesgyo"
      role="separator"
    />
  </div>
</DocumentFragment>
`;

exports[`InputsPanel > should render loading state 1`] = `
<DocumentFragment>
  <div
    class="msla-trace-inputs-outputs"
  >
    <div
      class="msla-trace-inputs-outputs-header"
    >
      <div
        style="border-radius: 8px; background: rgb(0, 0, 0); min-height: 32px; min-width: 6px;"
      />
      <button
        aria-expanded="true"
        class="fui-Button r1alrhcs ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        style="justify-content: flex-start; flex-grow: 1;"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
        Inputs
      </button>
      <button
        class="fui-Button r1alrhcs msla-show-raw-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        type="button"
      >
        Show raw inputs
        <span
          class="fui-Button__icon rywnvv2 ___1yz413i_pen21v0 f1a695kz"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
    </div>
    <div
      aria-labelledby="inputs-node1"
      class="msla-trace-values"
    >
      <section
        class="msla-trace-value-label"
      >
        <label
          class="msla-trace-value-display-name"
        />
        <div
          class="msla-colorizer-json-body"
        >
          <div
            aria-readonly="true"
            class="msla-colorizer-wrapper"
            role="textbox"
            tabindex="0"
          >
            <div
              class="buttons"
            >
              <button
                aria-label="Copy the value of '' to the clipboard"
                class="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
                type="button"
              >
                <span
                  class="fui-Button__icon rywnvv2"
                >
                  <span
                    data-testid="fluent-icon"
                  />
                </span>
              </button>
            </div>
            <pre
              class="prism-code language-json"
              style="color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);"
            >
              <div
                class="token-line"
                style="color: rgb(0, 0, 0);"
              >
                <span
                  class="token plain"
                >
                  ‌
                </span>
              </div>
            </pre>
          </div>
        </div>
      </section>
    </div>
    <div
      aria-orientation="horizontal"
      class="fui-Divider ___14drqcq_z8b5q40 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q fly5x3f f163fonl f51yk4v f13rof3u f8rth92 f6czdpx f1iyka9k fzynn9s fekrn8e f1kyqvp9 fesgyo"
      role="separator"
    />
  </div>
</DocumentFragment>
`;

exports[`InputsPanel > should render the InputsPanel with inputs 1`] = `
<DocumentFragment>
  <div
    class="msla-trace-inputs-outputs"
  >
    <div
      class="msla-trace-inputs-outputs-header"
    >
      <div
        style="border-radius: 8px; background: rgb(0, 0, 0); min-height: 32px; min-width: 6px;"
      />
      <button
        aria-expanded="true"
        class="fui-Button r1alrhcs ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        style="justify-content: flex-start; flex-grow: 1;"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
        Inputs
      </button>
      <button
        class="fui-Button r1alrhcs msla-show-raw-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        type="button"
      >
        Show raw inputs
        <span
          class="fui-Button__icon rywnvv2 ___1yz413i_pen21v0 f1a695kz"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
    </div>
    <div
      aria-labelledby="inputs-node1"
      class="msla-trace-values"
    >
      <section
        class="msla-trace-value-label"
      >
        <label
          class="msla-trace-value-display-name"
        />
        <div
          class="msla-colorizer-json-body"
        >
          <div
            aria-readonly="true"
            class="msla-colorizer-wrapper"
            role="textbox"
            tabindex="0"
          >
            <div
              class="buttons"
            >
              <button
                aria-label="Copy the value of '' to the clipboard"
                class="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
                type="button"
              >
                <span
                  class="fui-Button__icon rywnvv2"
                >
                  <span
                    data-testid="fluent-icon"
                  />
                </span>
              </button>
            </div>
            <pre
              class="prism-code language-json"
              style="color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);"
            >
              <div
                class="token-line"
                style="color: rgb(0, 0, 0);"
              >
                <span
                  class="token plain"
                >
                  ‌
                </span>
              </div>
            </pre>
          </div>
        </div>
      </section>
    </div>
    <div
      aria-orientation="horizontal"
      class="fui-Divider ___14drqcq_z8b5q40 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q fly5x3f f163fonl f51yk4v f13rof3u f8rth92 f6czdpx f1iyka9k fzynn9s fekrn8e f1kyqvp9 fesgyo"
      role="separator"
    />
  </div>
</DocumentFragment>
`;

exports[`InputsPanel > should render the InputsPanel with no inputs 1`] = `
<DocumentFragment>
  <div
    class="msla-trace-inputs-outputs"
  >
    <div
      class="msla-trace-inputs-outputs-header"
    >
      <div
        style="border-radius: 8px; background: rgb(0, 0, 0); min-height: 32px; min-width: 6px;"
      />
      <button
        aria-expanded="true"
        class="fui-Button r1alrhcs ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        style="justify-content: flex-start; flex-grow: 1;"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
        Inputs
      </button>
    </div>
    <div
      class="msla-trace-values"
    >
      <div
        class="msla-trace-download-link"
      >
        <a
          aria-label="Download (Alt or Option + select)"
          class="ms-Link root-184"
          download=""
          href="http://example.com"
          rel="noopener"
          target="_blank"
        >
          Download (Alt or Option + select)
        </a>
      </div>
    </div>
    <div
      aria-orientation="horizontal"
      class="fui-Divider ___14drqcq_z8b5q40 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q fly5x3f f163fonl f51yk4v f13rof3u f8rth92 f6czdpx f1iyka9k fzynn9s fekrn8e f1kyqvp9 fesgyo"
      role="separator"
    />
  </div>
</DocumentFragment>
`;

exports[`InputsPanel > should render the InputsPanel with secure inputs 1`] = `
<DocumentFragment>
  <section
    class="msla-trace-inputs-outputs"
  >
    <div
      class="msla-trace-inputs-outputs-header"
    >
      <div
        class="msla-trace-inputs-outputs-header-text"
        style="border-color: #000000b3;"
      >
        Inputs
      </div>
    </div>
    <div
      class="msla-trace-values"
    >
      <div
        class="msla-trace-inputs-outputs-secured"
      >
        <div
          class="msla-trace-secured-text"
        >
          Content not shown due to security configuration.
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
